@@ -121,7 +121,7 @@
 			<!-- Other directives -->
 			<keyword>(alias)(?=[(])</keyword>
 			<keyword>((re)?export)(?=[(])</keyword>
-			<keyword>(in(itialization|fo))(?=[(])</keyword>			
+			<keyword>(in(clude|itialization|fo))(?=[(])</keyword>			
 			<keyword>(mod(e|ule))(?=[(])</keyword>			
 			<keyword>(dynamic)(?=[(])</keyword>			
 			<keyword>(dynamic)(?=[.])</keyword>			
