@@ -91,6 +91,7 @@ implements
 implements_protocol
 imports
 imports_category
+include
 info
 initialization
 instantiates
