@@ -32,6 +32,7 @@ comment
 :- encoding(Encoding).
 :- op(Precedence, Associativity, Operator).
 :- ensure_loaded(File).
+:- include(File).
 :- set_prolog_flag(Flag, Value).
 :- set_logtalk_flag(Flag, Value).
 
@@ -42,9 +43,9 @@ comment
 	extends(parent)).
 
 	:- info([
-		version is 1.6,
+		version is 1.7,
 		author is &#x27;Paulo Moura&#x27;,
-		date is 2011/02/07,
+		date is 2011/05/07,
 		comment is &#x27;Sample prototype for testing syntax coloring.&#x27;]).
 
 	:- threaded.
@@ -80,6 +81,9 @@ comment
 	:- info(position/2, [
 		comment is &#x27;Predicate brief description.&#x27;,
 		arguments is [&#x27;Arg1&#x27;-&#x27;Arg1 description&#x27;, &#x27;Arg2&#x27;-&#x27;Arg2 description&#x27;]]).
+
+	:- public(nt//2).
+	:- meta_non_terminal(nt(1, *)).
 
 	:- protected(bbb/2).
 	:- synchronized(bbb/2).
