@@ -79,6 +79,7 @@
 				<string>\:\-[[:space:]](ensure_loaded)\(</string>			
 				<string>\:\-[[:space:]](export)\(</string>			
 				<string>\:\-[[:space:]](reexport)\(</string>			
+				<string>\:\-[[:space:]](include)\(</string>			
 				<string>\:\-[[:space:]](initialization)\(</string>			
 				<string>\:\-[[:space:]](info)\(</string>			
 				<string>\:\-[[:space:]](mode)\(</string>			
