@@ -225,8 +225,7 @@
 				<regex>:-\s(end_(?:object|protocol|category))\.</regex>
 				<regex>:-\s(alias)\(</regex>
 				<regex>:-\s(e(?:n(?:coding|sure_loaded)|xport))\(</regex>
-				<regex>:-\s(initialization)\(</regex>
-				<regex>:-\s(info)\(</regex>
+				<regex>:-\s(in(?:clude|itialization|fo))\(</regex>
 				<regex>:-\s(mod(?:e|ule))\(</regex>
 				<regex>:-\s(dynamic)\(</regex>
 				<regex>:-\s(dynamic)\.</regex>
