@@ -16,6 +16,7 @@
 			<string>endif</string>
 			<string>encoding</string>
 			<string>ensure_loaded</string>
+			<string>include</string>
 			<string>calls</string>
 			<string>category</string>
 			<string>dynamic</string>
