@@ -112,7 +112,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>(:-)\s(c(alls|oinductive)|e(lif|n(coding|sure_loaded)|xport)|i(f|n(itialization|fo))|reexport|set_(logtalk|prolog)_flag|uses)(?=[(])</string>
+			<string>(:-)\s(c(alls|oinductive)|e(lif|n(coding|sure_loaded)|xport)|i(f|n(clude|itialization|fo))|reexport|set_(logtalk|prolog)_flag|uses)(?=[(])</string>
 			<key>name</key>
 			<string>storage.modifier.others.logtalk</string>
 		</dict>
